--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,18 +1,14 @@
-<html>
-	<head>
-		<title>Tori's Blog</title>
-	</head>
-	<body> 
-		<div>
-			<center><h1><a href="">Tori's Blog</a></h1></center>
-		</div>
-		{% for post in posts %}
-		<div>
-			<p>published: {{ post.published_date }}</p>
-			<h1><a href="">{{ post.title }}</a></h1>
-			<p>{{ post.text|linebreaks }}
-		</div>
-				{% endfor %}
+{% extends "blog/base.html" %}
 
-	</body>
-</html>
+{% block content %}
+	{% for post in posts %}
+		<div class="post">
+			<div class="date">
+				{{ post.published_date }}</p>
+			</div>
+			<h1><a href="{% url "post_detail" pk=post.pk %}">{{ post.title }}</a></h1>
+			<p>{{ post.text|linebreaks }}</p>
+		</div>
+	{% endfor %}
+{% endblock content %}
+       
