--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -4,9 +4,9 @@ h1 a {
 }
 
 .page-header {
-    background-color: #ff9400;
+    background-color: #131e37;
     margin-top: 0;
-    padding: 20px 20px 20px 40px;
+    padding: 20px 60px 20px 100px;
 }
 
 .page-header h1, .page-header h1 a, .page-header h1 a:visited, .page-header h1 a:active {
@@ -16,7 +16,7 @@ h1 a {
 }
 
 .content {
-    margin-left: 40px;
+    margin-left: 80px;
 }
 
 h1, h2, h3, h4 {
@@ -49,4 +49,5 @@ h1, h2, h3, h4 {
 
 .post h1 a, .post h1 a:visited {
     color: #000000;
+    background-color: #d4d4d4;
 }
